rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h350.4_2011_SipIdentity.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h350.4_2011_SipIdentity.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod sip_identity {
    extern crate alloc;
    use super::comm_uri::{
        CASE_IGNORE_IA5_MATCH, CASE_IGNORE_IA5_SUBSTRINGS_MATCH, H350_CR, USER_SMIMECERTIFICATE,
    };
    use super::information_framework::*;
    use super::selected_attribute_types::{
        UnboundedDirectoryString, CASE_EXACT_MATCH, CASE_EXACT_SUBSTRINGS_MATCH, CASE_IGNORE_MATCH,
        CASE_IGNORE_SUBSTRINGS_MATCH, OCTET_STRING_MATCH,
    };
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    pub static AT: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SIP_ID, &[1u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static OC: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***SIP_ID, &[2u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static SIP_ID: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***H350_CR, &[6u32]].concat())
            .unwrap()
            .to_owned()
    });
}
