rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h350.5_2011_GenericIdentity.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h350.5_2011_GenericIdentity.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod generic_identity {
    extern crate alloc;
    use super::comm_uri::H350_CR;
    use super::information_framework::*;
    use super::selected_attribute_types::{
        UnboundedDirectoryString, CASE_IGNORE_MATCH, CASE_IGNORE_SUBSTRINGS_MATCH,
    };
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    pub static AT: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***GI, &[1u32]].concat()).unwrap().to_owned());
    pub static GI: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***H350_CR, &[7u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static OC: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***GI, &[2u32]].concat()).unwrap().to_owned());
}
