rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h350_2006_CommURI.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h350_2006_CommURI.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod comm_uri {
    extern crate alloc;
    use super::information_framework::*;
    use super::selected_attribute_types::{DirectoryString, CASE_EXACT_MATCH};
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    pub static AT: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***CU, &[1u32]].concat()).unwrap().to_owned());
    pub static CU: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***H350_CR, &[1u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static H350_CR: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[0u32, 0u32, 8u32, 350u32, 1u32, 1u32]).to_owned());
    pub static OC: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***CU, &[2u32]].concat()).unwrap().to_owned());
}
